--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -12,5 +12,7 @@ jobs: # какие задачи делаем
         uses: actions/setup-java@v1 # устанавливаем JDK
         with:
           java-version: 11 # версия для установки
-      - name: BBuild with Gradle
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+      - name: Build with Gradle
         run: ./gradlew build
