CI tweak attempt 3

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -15,4 +15,4 @@ jobs: # какие задачи делаем
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Build with Gradle
-        run: ./gradlew wrapper build
+        run: ./gradlew build
